--- a/New folder/crime_data_cleaning.ipynb
+++ b/New folder/crime_data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
        "[14831 rows x 18 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
        "[14831 rows x 13 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
        "[28170 rows x 12 columns]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -1207,7 +1207,7 @@
        "[26292 rows x 12 columns]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1519,7 @@
        "[26292 rows x 16 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1837,7 +1837,7 @@
        "[26292 rows x 16 columns]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1851,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1863,7 +1863,7 @@
        "Name: city, dtype: int64"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1874,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1904,18 +1904,18 @@
        "30342          204\n",
        "30319           72\n",
        "30344           22\n",
-       "30361            8\n",
        "30336            8\n",
-       "30324-5018       6\n",
+       "30361            8\n",
        "30328            6\n",
+       "30324-5018       6\n",
        "30339            4\n",
-       "30375            2\n",
-       "30380            2\n",
        "30304            2\n",
+       "30380            2\n",
+       "30375            2\n",
        "Name: zipcode, dtype: int64"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1926,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2226,7 +2226,7 @@
        "[26076 rows x 16 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2238,7 +2238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2248,7 +2248,7 @@
        "Name: city, dtype: int64"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2259,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2571,7 +2571,7 @@
        "[26076 rows x 16 columns]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2583,14 +2583,330 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\vinoy\\anaconda3\\envs\\Pythondata\\lib\\site-packages\\ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>offense_id</th>\n",
+       "      <th>rpt_date</th>\n",
+       "      <th>occur_date</th>\n",
+       "      <th>occur_time</th>\n",
+       "      <th>poss_date</th>\n",
+       "      <th>poss_time</th>\n",
+       "      <th>beat</th>\n",
+       "      <th>UC2_Literal</th>\n",
+       "      <th>neighborhood</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>zipcode</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>21140096</td>\n",
+       "      <td>5/20/2021</td>\n",
+       "      <td>5/19/2021</td>\n",
+       "      <td>15:20</td>\n",
+       "      <td>5/19/2021</td>\n",
+       "      <td>15:25</td>\n",
+       "      <td>103</td>\n",
+       "      <td>LARCENY-FROM VEHICLE</td>\n",
+       "      <td>Hills Park</td>\n",
+       "      <td>33.801693</td>\n",
+       "      <td>-84.436453</td>\n",
+       "      <td>1720 MARIETTA BLVD NW</td>\n",
+       "      <td>UNITED STATES</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>30318</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>21282015</td>\n",
+       "      <td>8/6/2021</td>\n",
+       "      <td>8/6/2021</td>\n",
+       "      <td>22:23</td>\n",
+       "      <td>8/6/2021</td>\n",
+       "      <td>22:24</td>\n",
+       "      <td>508</td>\n",
+       "      <td>LARCENY-FROM VEHICLE</td>\n",
+       "      <td>Downtown</td>\n",
+       "      <td>33.762549</td>\n",
+       "      <td>-84.387874</td>\n",
+       "      <td>300 PEACHTREE ST NE</td>\n",
+       "      <td>UNITED STATES</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>30308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>21320347</td>\n",
+       "      <td>2/1/2021</td>\n",
+       "      <td>1/31/2021</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>2/1/2021</td>\n",
+       "      <td>06:53</td>\n",
+       "      <td>509</td>\n",
+       "      <td>LARCENY-FROM VEHICLE</td>\n",
+       "      <td>Downtown</td>\n",
+       "      <td>33.760759</td>\n",
+       "      <td>-84.383773</td>\n",
+       "      <td>229 COURTLAND ST NE</td>\n",
+       "      <td>UNITED STATES</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>30303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>21791668</td>\n",
+       "      <td>6/28/2021</td>\n",
+       "      <td>6/27/2021</td>\n",
+       "      <td>21:17</td>\n",
+       "      <td>6/28/2021</td>\n",
+       "      <td>20:00</td>\n",
+       "      <td>102</td>\n",
+       "      <td>LARCENY-NON VEHICLE</td>\n",
+       "      <td>Vine City</td>\n",
+       "      <td>33.755768</td>\n",
+       "      <td>-84.416631</td>\n",
+       "      <td>870 MAYSON TURNER RD NW</td>\n",
+       "      <td>UNITED STATES</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>30314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>61583880</td>\n",
+       "      <td>2/11/2021</td>\n",
+       "      <td>2/11/2021</td>\n",
+       "      <td>19:15</td>\n",
+       "      <td>2/11/2021</td>\n",
+       "      <td>20:29</td>\n",
+       "      <td>401</td>\n",
+       "      <td>LARCENY-FROM VEHICLE</td>\n",
+       "      <td>West End</td>\n",
+       "      <td>33.740594</td>\n",
+       "      <td>-84.415800</td>\n",
+       "      <td>850 OAK ST SW</td>\n",
+       "      <td>UNITED STATES</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>30310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14080</th>\n",
+       "      <td>212230459</td>\n",
+       "      <td>8/11/2021</td>\n",
+       "      <td>8/10/2021</td>\n",
+       "      <td>19:30</td>\n",
+       "      <td>8/11/2021</td>\n",
+       "      <td>07:30</td>\n",
+       "      <td>403</td>\n",
+       "      <td>BURGLARY</td>\n",
+       "      <td>Oakland City</td>\n",
+       "      <td>33.724966</td>\n",
+       "      <td>-84.426435</td>\n",
+       "      <td>1099 SELWIN AVE SW</td>\n",
+       "      <td>UNITED STATES</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>30310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14081</th>\n",
+       "      <td>212230498</td>\n",
+       "      <td>8/11/2021</td>\n",
+       "      <td>8/2/2021</td>\n",
+       "      <td>14:30</td>\n",
+       "      <td>8/2/2021</td>\n",
+       "      <td>16:00</td>\n",
+       "      <td>601</td>\n",
+       "      <td>LARCENY-NON VEHICLE</td>\n",
+       "      <td>Virginia Highland</td>\n",
+       "      <td>33.779969</td>\n",
+       "      <td>-84.349806</td>\n",
+       "      <td>1144 ROSEDALE DR NE</td>\n",
+       "      <td>UNITED STATES</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>30306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14082</th>\n",
+       "      <td>212230549</td>\n",
+       "      <td>8/11/2021</td>\n",
+       "      <td>8/11/2021</td>\n",
+       "      <td>09:21</td>\n",
+       "      <td>8/11/2021</td>\n",
+       "      <td>09:28</td>\n",
+       "      <td>604</td>\n",
+       "      <td>BURGLARY</td>\n",
+       "      <td>Sweet Auburn</td>\n",
+       "      <td>33.750784</td>\n",
+       "      <td>-84.376964</td>\n",
+       "      <td>141 HILLIARD ST SE</td>\n",
+       "      <td>UNITED STATES</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>30312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14083</th>\n",
+       "      <td>212230568</td>\n",
+       "      <td>8/11/2021</td>\n",
+       "      <td>8/10/2021</td>\n",
+       "      <td>21:40</td>\n",
+       "      <td>8/11/2021</td>\n",
+       "      <td>09:26</td>\n",
+       "      <td>604</td>\n",
+       "      <td>LARCENY-FROM VEHICLE</td>\n",
+       "      <td>Sweet Auburn</td>\n",
+       "      <td>33.759313</td>\n",
+       "      <td>-84.375614</td>\n",
+       "      <td>180 JACKSON ST NE</td>\n",
+       "      <td>UNITED STATES</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>30312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14084</th>\n",
+       "      <td>212230651</td>\n",
+       "      <td>8/11/2021</td>\n",
+       "      <td>8/11/2021</td>\n",
+       "      <td>09:00</td>\n",
+       "      <td>8/11/2021</td>\n",
+       "      <td>10:58</td>\n",
+       "      <td>304</td>\n",
+       "      <td>LARCENY-NON VEHICLE</td>\n",
+       "      <td>Peoplestown</td>\n",
+       "      <td>33.723348</td>\n",
+       "      <td>-84.393203</td>\n",
+       "      <td>1162 PRYOR ST SW</td>\n",
+       "      <td>UNITED STATES</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>30315</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>25990 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       offense_id   rpt_date occur_date occur_time  poss_date poss_time  beat  \\\n",
+       "0        21140096  5/20/2021  5/19/2021      15:20  5/19/2021     15:25   103   \n",
+       "1        21282015   8/6/2021   8/6/2021      22:23   8/6/2021     22:24   508   \n",
+       "2        21320347   2/1/2021  1/31/2021      00:00   2/1/2021     06:53   509   \n",
+       "3        21791668  6/28/2021  6/27/2021      21:17  6/28/2021     20:00   102   \n",
+       "4        61583880  2/11/2021  2/11/2021      19:15  2/11/2021     20:29   401   \n",
+       "...           ...        ...        ...        ...        ...       ...   ...   \n",
+       "14080   212230459  8/11/2021  8/10/2021      19:30  8/11/2021     07:30   403   \n",
+       "14081   212230498  8/11/2021   8/2/2021      14:30   8/2/2021     16:00   601   \n",
+       "14082   212230549  8/11/2021  8/11/2021      09:21  8/11/2021     09:28   604   \n",
+       "14083   212230568  8/11/2021  8/10/2021      21:40  8/11/2021     09:26   604   \n",
+       "14084   212230651  8/11/2021  8/11/2021      09:00  8/11/2021     10:58   304   \n",
+       "\n",
+       "                UC2_Literal       neighborhood        lat       long  \\\n",
+       "0      LARCENY-FROM VEHICLE         Hills Park  33.801693 -84.436453   \n",
+       "1      LARCENY-FROM VEHICLE           Downtown  33.762549 -84.387874   \n",
+       "2      LARCENY-FROM VEHICLE           Downtown  33.760759 -84.383773   \n",
+       "3       LARCENY-NON VEHICLE          Vine City  33.755768 -84.416631   \n",
+       "4      LARCENY-FROM VEHICLE           West End  33.740594 -84.415800   \n",
+       "...                     ...                ...        ...        ...   \n",
+       "14080              BURGLARY       Oakland City  33.724966 -84.426435   \n",
+       "14081   LARCENY-NON VEHICLE  Virginia Highland  33.779969 -84.349806   \n",
+       "14082              BURGLARY       Sweet Auburn  33.750784 -84.376964   \n",
+       "14083  LARCENY-FROM VEHICLE       Sweet Auburn  33.759313 -84.375614   \n",
+       "14084   LARCENY-NON VEHICLE        Peoplestown  33.723348 -84.393203   \n",
+       "\n",
+       "                       Address        Country     city state zipcode  \n",
+       "0        1720 MARIETTA BLVD NW  UNITED STATES  Atlanta    GA   30318  \n",
+       "1          300 PEACHTREE ST NE  UNITED STATES  Atlanta    GA   30308  \n",
+       "2          229 COURTLAND ST NE  UNITED STATES  Atlanta    GA   30303  \n",
+       "3      870 MAYSON TURNER RD NW  UNITED STATES  Atlanta    GA   30314  \n",
+       "4                850 OAK ST SW  UNITED STATES  Atlanta    GA   30310  \n",
+       "...                        ...            ...      ...   ...     ...  \n",
+       "14080       1099 SELWIN AVE SW  UNITED STATES  Atlanta    GA   30310  \n",
+       "14081      1144 ROSEDALE DR NE  UNITED STATES  Atlanta    GA   30306  \n",
+       "14082       141 HILLIARD ST SE  UNITED STATES  Atlanta    GA   30312  \n",
+       "14083        180 JACKSON ST NE  UNITED STATES  Atlanta    GA   30312  \n",
+       "14084         1162 PRYOR ST SW  UNITED STATES  Atlanta    GA   30315  \n",
+       "\n",
+       "[25990 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_crime.dropna(how='any', inplace = True)\n",
+    "new_crime"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2624,13 +2940,13 @@
        "30336       8\n",
        "30328       6\n",
        "30339       4\n",
+       "30380       2\n",
        "30375       2\n",
        "30304       2\n",
-       "30380       2\n",
        "Name: zipcode, dtype: int64"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2641,7 +2957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2657,7 +2973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -3027,7 +3343,7 @@
        "[342913 rows x 19 columns]"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3039,7 +3355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -3067,7 +3383,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3078,7 +3394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -3415,7 +3731,7 @@
        "[342913 rows x 18 columns]"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
