--- a/Analysis/crime_data_cleaning.ipynb
+++ b/Analysis/crime_data_cleaning.ipynb
@@ -3509,6 +3509,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 350,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3/7/2021      216\n",
+       "1/25/2021     212\n",
+       "1/24/2021     192\n",
+       "1/23/2021     186\n",
+       "1/2/2021      176\n",
+       "             ... \n",
+       "12/26/2020      2\n",
+       "1/3/2020        2\n",
+       "9/15/2020       2\n",
+       "10/25/2020      2\n",
+       "12/14/2020      2\n",
+       "Name: poss_date, Length: 258, dtype: int64"
+      ]
+     },
+     "execution_count": 350,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_crime[\"poss_date\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 325,
    "metadata": {},
    "outputs": [],
