--- a/Analysis/crime_data_cleaning.ipynb
+++ b/Analysis/crime_data_cleaning.ipynb
@@ -30,7 +30,7 @@
    ],
    "source": [
     "# Create connection variable\n",
-    "conn = 'mongodb+srv://admin_user2021:TheFinalProject2021@cluster0.krwok.mongodb.net/test'\n",
+    "conn = 'mongodb+srv://admin_user2021:<password>@cluster0.krwok.mongodb.net/test'\n",
     "\n",
     "# Pass connection to the pymongo instance.\n",
     "client = pymongo.MongoClient(conn)\n",
